Add reset button post game and make it work

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,3 +39,11 @@
 img{
 	max-width: 100%;
 }
+
+.message{
+	text-align: center;
+	font-size: 24px;
+	color: white;
+	background-color: red;
+	margin-top: 10px;
+}
